@@ -5,8 +5,10 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import lombok.AccessLevel;
 import lombok.Data;
+import lombok.NonNull;
+import lombok.Setter;
 import org.gecko.exceptions.ModelException;
 
 /**
@@ -15,6 +17,7 @@ import org.gecko.exceptions.ModelException;
  * and a start-{@link State}. Contains methods for managing the afferent data.
  */
 @Data
+@Setter(AccessLevel.NONE)
 public class Automaton {
     private State startState;
     private final Set<Region> regions;
@@ -22,8 +25,7 @@ public class Automaton {
     private final Set<Edge> edges;
 
     @JsonCreator
-    public Automaton() throws ModelException {
-        setStartState(null);
+    public Automaton() {
         this.regions = new HashSet<>();
         this.states = new HashSet<>();
         this.edges = new HashSet<>();
@@ -33,53 +35,45 @@ public class Automaton {
         if (state != null && !states.contains(state)) {
             throw new ModelException("State cannot be set as start-state.");
         }
+        startState = state;
     }
 
     public State getStateWithContract(Contract contract) {
         return states.stream().filter(state -> state.getContracts().contains(contract)).findFirst().orElse(null);
     }
 
-    public void addRegion(Region region) throws ModelException {
-        if (region == null || regions.contains(region)) {
-            throw new ModelException("Cannot add region to automaton.");
-        }
+    public void addRegion(@NonNull Region region) {
         regions.add(region);
     }
 
-    public void addRegions(Set<Region> regions) throws ModelException {
+    public void addRegions(@NonNull Set<Region> regions) {
         for (Region region : regions) {
             addRegion(region);
         }
     }
 
-    public void removeRegion(Region region) throws ModelException {
-        if (region == null || !regions.contains(region)) {
-            throw new ModelException("Cannot remove region from automaton.");
-        }
+    public void removeRegion(@NonNull Region region) {
         regions.remove(region);
     }
 
-    public void removeRegions(Set<Region> regions) throws ModelException {
+    public void removeRegions(@NonNull Set<Region> regions) {
         for (Region region : regions) {
             removeRegion(region);
         }
     }
 
-    public void addState(State state) throws ModelException {
-        if (state == null || states.contains(state)) {
-            throw new ModelException("Cannot add state to automaton.");
-        }
+    public void addState(@NonNull State state) {
         states.add(state);
     }
 
-    public void addStates(Set<State> states) throws ModelException {
+    public void addStates(@NonNull Set<State> states) {
         for (State state : states) {
             addState(state);
         }
     }
 
-    public void removeState(State state) throws ModelException {
-        if (states.size() <= 1 && states.contains(state)) {
+    public void removeState(@NonNull State state) throws ModelException {
+        if (states.size() == 1 && states.contains(state)) {
             setStartState(null);
             states.remove(state);
             return;
@@ -90,33 +84,27 @@ public class Automaton {
         states.remove(state);
     }
 
-    public void removeStates(Set<State> states) throws ModelException {
+    public void removeStates(@NonNull Set<State> states) throws ModelException {
         for (State state : states) {
             removeState(state);
         }
     }
 
-    public void addEdge(Edge edge) throws ModelException {
-        if (edge == null || edges.contains(edge)) {
-            throw new ModelException("Cannot add edge to automaton.");
-        }
+    public void addEdge(@NonNull Edge edge) {
         edges.add(edge);
     }
 
-    public void addEdges(Set<Edge> edges) throws ModelException {
+    public void addEdges(@NonNull Set<Edge> edges) {
         for (Edge edge : edges) {
             addEdge(edge);
         }
     }
 
-    public void removeEdge(Edge edge) throws ModelException {
-        if (edge == null || !edges.contains(edge)) {
-            throw new ModelException("Cannot remove edge to automaton.");
-        }
+    public void removeEdge(@NonNull Edge edge) {
         edges.remove(edge);
     }
 
-    public void removeEdges(Set<Edge> edges) throws ModelException {
+    public void removeEdges(@NonNull Set<Edge> edges) {
         for (Edge edge : edges) {
             removeEdge(edge);
         }
@@ -127,13 +115,14 @@ public class Automaton {
     }
 
     public List<Edge> getOutgoingEdges(State state) {
-        return edges.stream().filter(edge -> edge.getSource().equals(state)).collect(Collectors.toList());
+        return edges.stream().filter(edge -> edge.getSource().equals(state)).toList();
     }
 
     public List<Region> getRegionsWithState(State state) {
-        return regions.stream().filter(region -> region.getStates().contains(state)).collect(Collectors.toList());
+        return regions.stream().filter(region -> region.getStates().contains(state)).toList();
     }
 
+    @JsonIgnore
     public boolean isEmpty() {
         return states.isEmpty() && edges.isEmpty() && regions.isEmpty();
     }
